# sts2-tui

./: .gitignore  AGENT_GAPS.md  CLAUDE.md  README.md  STATUS.md  pyproject.toml  setup.sh
docs/: IMPROVEMENT_CHANGELOG.md  RL_PLAN.md
sts2_tui/: bridge.py  bridge_state.py  cli.py
sts2_tui/engine/: __init__.py
sts2_tui/engine/models/: __init__.py  cards.py  combat.py  creatures.py  map.py  potions.py  powers.py  relics.py  run.py
sts2_tui/tui/: __init__.py  __main__.py  app.py  controller.py  i18n.py  shared.py  sls.tcss
sts2_tui/tui/screens/: __init__.py  card_reward.py  character_select.py  combat.py  deck_viewer.py  event.py  generic.py  map.py  potion_menu.py  rest.py  shop.py
tests/: audit_gaps.md  conftest.py  keybinding_test.py  run_audit.py  run_explorer.py  test_bridge.py  test_card_edge_cases.py  test_characters.py  test_chinese.py  test_error_recovery.py  test_overlays.py  test_screens_loop.py  test_tui_screens.py  test_untested_paths.py  visual_test.py
tools/: gen_screenshots.py  rl_data_collector.py  tuned_bot.py
