[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sts2-tui"
version = "0.1.0"
description = "Slay the Spire 2 in your terminal"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "textual>=3.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]

[project.scripts]
sts2-tui = "sts2_tui.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
